# ARIA-Agentic-

./: ARIA_PLAN.md  CrewAI-Planning.md  PLAN.md  design-tokens.md  docker-compose.yml  tailwind.config.ts
.claude/: settings.json  settings.local.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_password_hash.py  003_add_file_size_uploaded_by.py  003_add_kb_document_metadata.py  003_change_embedding_dim.py
backend/app/: config.py  database.py  dependencies.py  main.py  tasks.py
backend/app/agents/: llm_config.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  conflict.py  evaluation.py  knowledge_base.py  report.py  tenant.py  user.py
backend/app/routers/: auth.py  evaluations.py  knowledge_base.py  tenants.py  users.py
backend/app/schemas/: auth.py  knowledge_base.py  tenant.py  user.py
backend/app/services/: kb_service.py  tenant_service.py  user_service.py
backend/app/tasks/: celery_app.py  document_tasks.py
backend/scripts/: seed.py
